--- a/Taller 3/index.html
+++ b/Taller 3/index.html
@@ -4,5 +4,9 @@
 
 <h1>INICIAR SESIÓN</h1>
 
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2c%2FLogouis.png&f=1&nofb=1" alt="Logo Universidad Industrial de Santander"> 
+
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fworld-it.ro%2Fimages%2Flogo_html.png&f=1&nofb=1" alt="Logo HTML5"> 
+
 </body>
 </html>
