--- a/Taller 3/index.html
+++ b/Taller 3/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html xmlns="http://www.uis.edu.co" lang="es" xml:lang="es">
+
+<title>Taller 3 JDD</title>
 
 <h1>INICIAR SESIÓN</h1>
 
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2c%2FLogouis.png&f=1&nofb=1" alt="Logo Universidad Industrial de Santander"> 
+<h2 align="left">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2c%2FLogouis.png&f=1&nofb=1" 
+alt="Logo Universidad Industrial de Santander" style="width:250px;"> 
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fworld-it.ro%2Fimages%2Flogo_html.png&f=1&nofb=1"
+alt="Logo HTML5" style="width:150px;"> 
+</h2>
 
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fworld-it.ro%2Fimages%2Flogo_html.png&f=1&nofb=1" alt="Logo HTML5"> 
-
+<body>
+<form>
+Nombre
+<input type="text" name="Nombre de usuario" value="" size="20" maxlength="30" />
+Contraseña
+<input type="password" name="Contraseña" value="" maxlength="15">
+<input type="submit" value="Entrar">
+</form>
+<br/>
+<p>
+Ha olvidado su contraseña? Haga click <a href="/Taller 3/imagenes.html">Aqui!</a> 
+<br/>
+Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de Santander</a>
+</p>
 </body>
 </html>
