--- a/Taller 3/index.html
+++ b/Taller 3/index.html
@@ -22,9 +22,31 @@ Contraseña
 </form>
 <br/>
 <p>
-Ha olvidado su contraseña? Haga click <a href="/Taller 3/imagenes.html">Aqui!</a> 
+Ha olvidado su contraseña? Haga click <a href="imagenes.html">Aqui!</a> 
 <br/>
 Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de Santander</a>
 </p>
+<br/>
+
+<p>
+<ol>
+    <li>Formularios</li>
+    <ul>
+        <li><a href="imagenes.html">Datos usuario</a></li>
+        <li><a href="imagenes.html">Frases celebres de usuario</a></li>
+    </ul>
+    <li>Grillas</li>
+    <ul>
+        <li><a href="imagenes.html">Normal</a></li>
+        <li><a href="imagenes.html">Avanzada</a></li>
+    </ul>
+    <li>Imágenes</li>
+    <ul>
+        <li><a href="imagenes.html">Lenguajes</a></li>
+    </ul>
+</ol>
+</p>>
 </body>
+
+
 </html>
