--- a/Taller 3/datosusuario.html
+++ b/Taller 3/datosusuario.html
@@ -5,6 +5,9 @@
 </head>
 <body>
         <h3> Rellene sus datos</h3>
+        <form action="index.html">
+        <button type="submit">Ir al menú</button>
+        </form>
         <form action="/cv/dataCV" method="post"></form>
         Nombre <br/>
         <input type="text" name="nombre" value="" size="20" maxlength="30" />
@@ -61,5 +64,6 @@ Estudiante
 <input type="submit" name="enviar" value="Guardar cambios" />
 <input type="reset" name="limpiar" value="Borrar los datos introducidos" />
 </form>
+
 </body>
 </html>
