--- a/Taller 3/index.html
+++ b/Taller 3/index.html
@@ -22,7 +22,7 @@ Contraseña
 </form>
 <br/>
 <p>
-Ha olvidado su contraseña? Haga click <a href="imagenes.html">Aqui!</a> 
+Ha olvidado su contraseña? Haga click <a href="recuperarpass.html">Aqui!</a> 
 <br/>
 Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de Santander</a>
 </p>
@@ -32,13 +32,13 @@ Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de S
 <ol>
     <li>Formularios</li>
     <ul>
-        <li><a href="imagenes.html">Datos usuario</a></li>
+        <li><a href="datosusuario.html">Datos usuario</a></li>
         <li><a href="imagenes.html">Frases celebres de usuario</a></li>
     </ul>
     <li>Grillas</li>
     <ul>
-        <li><a href="imagenes.html">Normal</a></li>
-        <li><a href="imagenes.html">Avanzada</a></li>
+        <li><a href="grillanormal.html">Normal</a></li>
+        <li><a href="grillaavanzada.html">Avanzada</a></li>
     </ul>
     <li>Imágenes</li>
     <ul>
