--- a/Taller 3/index.html
+++ b/Taller 3/index.html
@@ -33,7 +33,7 @@ Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de S
     <li>Formularios</li>
     <ul>
         <li><a href="datosusuario.html">Datos usuario</a></li>
-        <li><a href="imagenes.html">Frases celebres de usuario</a></li>
+        <li><a href="frasescelebres.html">Frases celebres de usuario</a></li>
     </ul>
     <li>Grillas</li>
     <ul>
