--- a/Taller 4/carPureCSS.html
+++ b/Taller 4/carPureCSS.html
@@ -26,48 +26,97 @@ crossorigin="anonymous">
     <form class="pure-form pure-form-aligned">
         <fieldset>
             <div class="pure-control-group">
-                <label for="aligned-name">Nombre</label>
-                <input type="text" id="aligned-name" placeholder="Nombre" maxlength="25"/>
-                <span class="pure-form-message-inline"></span>
-            </div>
-            <div class="pure-control-group">
-                <label for="aligned-name">Apellido</label>
-                <input type="text" id="aligned-name" placeholder="Apellido" maxlength="25"/>
-                <span class="pure-form-message-inline"></span>
-            </div>
-
-            <div class="pure-control-group">
-                <label for="aligned-name">Username</label>
-                <input type="text" id="aligned-name" placeholder="Username" required="" maxlength="20"/>
-                <span class="pure-form-message-inline">*</span>
-            </div>
-            <div class="pure-control-group">
-                <label for="aligned-password">Password</label>
-                <input type="password" id="aligned-password" placeholder="Password" required=""/>
-                <span class="pure-form-message-inline">*</span>
-            </div>
-            <div class="pure-control-group">
-                <label for="aligned-email">Correo electr&oacute;nico</label>
-                <input type="email" id="aligned-email" placeholder="Correo electr&oacute;nico" required="" maxlength="120"/>
-                <span class="pure-form-message-inline">*</span>
-            </div>
-            <div class="pure-control-group">
-                <label for="aligned-direccion">Direcci&oacute;n</label>
-                <input type="text" id="aligned-direccion" placeholder="Direcci&oacute;n"/>
-                <span class="pure-form-message-inline"></span>
-            </div>
-            <div class="pure-control-group">
-                <label for="aligned-telefono">Tel&eacute;fono</label>
-                <input type="text" id="aligned-telefono" placeholder="Tel&eacute;fono" maxlength="20"/>
-                <span class="pure-form-message-inline"></span>
-            </div>
-            <div class="pure-control-group">
-                <label for="pais">Pa&iacute;s</label>
-                <select id="pais">
+                <label for="id_pais">Pa&iacute;s</label>
+                <select id="id_pais">
                     <option>Colombia</option>
                     <option>Estados Unidos</option>
                     <option>Chile</option>
                 </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="id_movidoa">Combustible</label>
+                <select id="id_movidoa">
+                    <option>Gasolina</option>
+                    <option>Diesel</option>
+                    <option>Electrico</option>
+                </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="id_tipocoche">Tipo</label>
+                <select id="id_tipocoche">
+                    <option>Sedan</option>
+                    <option>Deporte</option>
+                    <option>Camioneta</option>
+                </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="id_estado">Estado</label>
+                <select id="id_estado">
+                    <option>Perfecto</option>
+                    <option>Usado</option>
+                    <option>Critico</option>
+                </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="id_marca">Marca</label>
+                <select id="id_marca">
+                    <option>Mazda</option>
+                    <option>Ford</option>
+                    <option>BMW</option>
+                </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="id_user">Marca</label>
+                <select id="id_user">
+                    <option>Mazda</option>
+                    <option>Ford</option>
+                    <option>BMW</option>
+                </select>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-name">Modelo</label>
+                <input type="text" id="aligned-name" placeholder="Modelo" maxlength="25"/>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-name">Anio</label>
+                <input type="text" id="aligned-name" placeholder="Anio" maxlength="25"/>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-name">Detalle</label>
+                <input type="text" id="aligned-name" placeholder="Detalle" required="" maxlength="20"/>
+                <span class="pure-form-message-inline">*</span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-password">Caja</label>
+                <input type="password" id="aligned-password" placeholder="Caja" required=""/>
+                <span class="pure-form-message-inline">*</span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-email">Motor</label>
+                <input type="email" id="aligned-email" placeholder="Motor" required="" maxlength="120"/>
+                <span class="pure-form-message-inline">*</span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-direccion">Fecha Publicacion</label>
+                <input type="text" id="aligned-direccion" placeholder="Fecha Publicacion"/>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-telefono">Precio</label>
+                <input type="text" id="aligned-telefono" placeholder="Tel&eacute;fono" maxlength="20"/>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div class="pure-control-group">
+                <label for="aligned-telefono">Moneda</label>
+                <input type="text" id="aligned-telefono" placeholder="Moneda" maxlength="20"/>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div class="pure-control-group">
+                <label for="cc_pic">Descripcion</label>
+                <input type="text" id="cc_pic" placeholder="Descripcion" maxlength="20"/>
+                <span class="pure-form-message-inline"></span>
             </div>
             <div class="pure-controls">
                 <label for="aligned-cb" class="pure-checkbox">
