--- a/Taller 6/index.html
+++ b/Taller 6/index.html
@@ -7,66 +7,9 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css">
     <title>Taller 6 JDD</title>
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
-<style>
-    *{
-        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-
-    #backgroundfirst {
-    background-color: #4b4b4b;
-    padding: 40px;
-    }
-
-    .container {
-    background-color: #9e9e9e;
-    padding: 20px;
-    }
-
-    input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    }
-
-    body {background-color: rgb(231, 231, 231);}
-
-    .l-box {
-        padding: 1em;
-    }
-
-    .pure-g > div {
-        box-sizing: border-box;
-    }
-
-    .l-box {
-        padding: 1em;
-    }
-
-    .footerbottom{
-    background: #68ca6d;
-    width: 100vw;
-    padding: 20px 0;
-    text-align: center;
-    }
-
-    .footerbottom p{
-    font-size: 14px;
-    word-spacing: 2px;
-    }
-
-    footer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: auto;
-    font-family: "Open Sans";
-    padding-top: 40px;
-    }
-
-</style>
 
 <body>
 <div class="pure-g" id="backgroundfirst">
