--- a/Taller 6/userPureCSS.html
+++ b/Taller 6/userPureCSS.html
@@ -95,11 +95,11 @@ input[type=submit] {
                 <input type="text" id="aligned-surname" placeholder="Apellido" maxlength="26"/>
                 <span class="pure-form-message-inline"></span>
             </div>
-            <div>
+            <div class="pure-control-group">
                 <label for="txtbirthdate">Fecha nacimiento</label>
                 <input id="txtbirthdate" type="text" name="txtbirthdate" maxlength="10" placeholder="mm/dd/yyyy" onkeyup="getAgeVal(0)" onblur="getAgeVal(0)">
                 <label for="txtage">Edad</label>
-                <input type="text"name="txtage" id="txtage" autocomplete="off" disabled>
+                <input type="text"name="txtage" id="txtage" autocomplete="off" disabled style="color: #04AA6D;">
             </div>
             <div class="pure-control-group">
                 <label for="aligned-name">Username</label>
