--- a/Taller 6/index.html
+++ b/Taller 6/index.html
@@ -13,9 +13,10 @@
 
 <body>
 <div class="pure-g" id="backgroundfirst">
-    <div class="pure-u-1 pure-u-md-1-3"> 
+    <div class="pure-u-1 pure-u-md-1-3">
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fworld-it.ro%2Fimages%2Flogo_html.png&f=1&nofb=1"
-        alt="Logo HTML5" style="width:100px;"> 
+        alt="Logo HTML5" style="width:100px; float: left; margin-right:40px;"> 
+        <h1>Taller 6 Programación Web JDD</h1>
     </div>
     <div class="pure-u-1 pure-u-md-1-3"></div>
     <div class="pure-u-1 pure-u-md-1-3">
@@ -26,18 +27,17 @@
                 <button type="submit" class="pure-button pure-button-primary">Sign in</button>
             </fieldset>
         </form>
-            </br>
-            Ha olvidado su password? Haga click <a href="recuperarpass.html">Aqui!</a>
+            <p>Ha olvidado su password? Haga click <a href="recuperarpass.html">Aqui!</a></p>
     </div>
 </div>
 
-<div class="pure-menu pure-menu-horizontal">
+<div class="pure-menu pure-menu-horizontal" id="backgroundmenu">
     <ul class="pure-menu-list">
         <li class="pure-menu-item">
-            <a href="userPureCSS.html" class="pure-menu-link">Registro de Usuarios</a>
+            <a href="userPureCSS.html" class="pure-menu-link" style="color: black;">Registro de Usuarios</a>
         </li>
         <li class="pure-menu-item">
-            <a href="grillajquery.html" class="pure-menu-link">Grilla JQuery</a>
+            <a href="grillajquery.html" class="pure-menu-link" style="color: black;">Grilla JQuery</a>
         </li>
     </ul>
 </div>
@@ -45,8 +45,9 @@
 <footer>
     <div class="footerbottom">
         <p>Desarrollado por la <a href="https://www.uis.edu.co">Universidad Industrial de Santander</a></p>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2c%2FLogouis.png&f=1&nofb=1" 
-        alt="Logo Universidad Industrial de Santander" style="width:150px;">
+        <img style="flex-basis: 7%; width:150px;margin-left: 20px;" 
+        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2c%2FLogouis.png&f=1&nofb=1" 
+        alt="Logo Universidad Industrial de Santander">
     </div>
 </footer>
 </body>
