--- a/Taller 6/userPureCSS.html
+++ b/Taller 6/userPureCSS.html
@@ -47,6 +47,12 @@ input[type=submit] {
   font-size: 18px;
 }
 
+#message8 p{
+    padding: 5px;
+    margin-top: 5px;
+    font-size: 14px;
+}
+
 /* Add a green text color and a checkmark when the requirements are right */
 .valid {
   color: green;
@@ -171,11 +177,11 @@ input[type=submit] {
     </div>
     <div id="message8" class="mensaje">
         <h3>¿Es alguna de estas enfermedades contagiosas?:</h3>
-        <p><input type="checkbox" id="aligned-cb" />Dengue </p>
-        <p><input type="checkbox" id="aligned-cb" />Fiebre Amarilla.</p>
-        <p><input type="checkbox" id="aligned-cb" />Malaria. </p>
-        <p><input type="checkbox" id="aligned-cb" />Coronavirus. </p>
-        <p><input type="checkbox" id="checkbox-contagiosa" />Otra. </p>     
+        <p><input type="checkbox" id="aligned-cb" />  Dengue </p>
+        <p><input type="checkbox" id="aligned-cb" />  Fiebre Amarilla.</p>
+        <p><input type="checkbox" id="aligned-cb" />  Malaria. </p>
+        <p><input type="checkbox" id="aligned-cb" />  Coronavirus. </p>
+        <p><input type="checkbox" id="checkbox-contagiosa" />  Otra. </p>     
         <input type="text" id="aligned-enfermedad" placeholder="Describa la enfermedad" maxlength="200"/>
     </div>
 </body>
