--- a/Taller 7/index.html
+++ b/Taller 7/index.html
@@ -6,7 +6,7 @@
     integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css">
-    <title>Taller 6 JDD</title>
+    <title>Taller 7 JDD</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -16,7 +16,7 @@
     <div class="pure-u-1 pure-u-md-1-3">
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fworld-it.ro%2Fimages%2Flogo_html.png&f=1&nofb=1"
         alt="Logo HTML5" style="width:100px; float: left; margin-right:40px;"> 
-        <h1>Taller 6 Programación Web JDD</h1>
+        <h1>Taller 7 Programación Web JDD</h1>
     </div>
     <div class="pure-u-1 pure-u-md-1-3"></div>
     <div class="pure-u-1 pure-u-md-1-3">
@@ -34,10 +34,7 @@
 <div class="pure-menu pure-menu-horizontal" id="backgroundmenu">
     <ul class="pure-menu-list">
         <li class="pure-menu-item">
-            <a href="userPureCSS.html" class="pure-menu-link" style="color: black;">Registro de Usuarios</a>
-        </li>
-        <li class="pure-menu-item">
-            <a href="grillajquery.html" class="pure-menu-link" style="color: black;">Grilla JQuery</a>
+            <a href="registrousuarios.html" class="pure-menu-link" style="color: black;">Registro de Usuarios</a>
         </li>
     </ul>
 </div>
