--- a/Taller 7/registrousuarios.html
+++ b/Taller 7/registrousuarios.html
@@ -36,11 +36,13 @@
 
     .mensaje {
         display: none;
-        background: #f1f1f1;
+        background: #ececec;
         color: #000;
         position: relative;
         padding: 20px;
-        margin-top: 10px;
+        margin: 20px auto 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        border-radius: 5px;
     }
 
     .mensaje p {
@@ -83,70 +85,91 @@
     }
 </style>
 
-<body>
-
-    <h3 style="margin-left: 30;">
-        <br />Llene el siguiente formulario<br />
-    </h3>
-
-    <p style="margin-left: 30;">
-        <br />Las casillas marcadas con un * son requeridas.<br />
-    </p>
-
-    <form id='form' class="pure-form pure-form-aligned">
-        <label><h2>Registro de usuarios</h2></label>
+<body> 
+    <form id='form' class="pure-form pure-form-stacked">
+        <label>
+            <h2>Registro de usuarios</h2>
+            Las casillas marcadas con un * son requeridas.
+        </label>
         <fieldset>
             <div class="pure-control-group">
                 <label for="aligned-name">Nombre</label>
                 <input type="text" id="aligned-name" placeholder="Nombre" maxlength="25" />
                 <span class="pure-form-message-inline"></span>
             </div>
+            <div id="message4" class="mensaje">
+                <h3>El nombre debe contener lo siguiente:</h3>
+                <p id="nombre" class="invalid">El nombre debe tener como maximo <b>25 caracteres</b></p>
+            </div>
             <div class="pure-control-group">
                 <label for="aligned-name">Apellido</label>
                 <input type="text" id="aligned-surname" placeholder="Apellido" maxlength="26" />
                 <span class="pure-form-message-inline"></span>
             </div>
+            <div id="message5" class="mensaje">
+                <h3>El apellido debe contener lo siguiente:</h3>
+                <p id="apellido" class="invalid">El apellido debe tener como maximo <b>25 caracteres</b></p>
+            </div>
             <div class="pure-control-group">
                 <label for="txtbirthdate">Fecha nacimiento</label>
-                <input id="txtbirthdate" type="text" name="txtbirthdate" maxlength="10" placeholder="mm/dd/yyyy" onkeyup="getAgeVal(0)" onblur="getAgeVal(0)">
+                <input id="txtbirthdate" type="text" name="txtbirthdate" maxlength="10" placeholder="mm/dd/yyyy"
+                    onkeyup="getAgeVal(0)" onblur="getAgeVal(0)">
             </div>
             <div class="pure-control-group">
                 <label for="txtage">Edad</label>
                 <input type="text" name="txtage" id="txtage" autocomplete="off" disabled style="color: #04AA6D;">
             </div>
             <div class="pure-control-group">
-                <label for="aligned-name">Username</label>
+                <label for="aligned-name">Username *</label>
                 <input type="text" id="aligned-username" placeholder="Username" required="" maxlength="25" />
-                <span class="pure-form-message-inline">*</span>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div id="message7" class="mensaje">
+                <h3>El usuario debe contener lo siguiente:</h3>
+                <p id="usuario" class="invalid">El usuario debe contener entre:<b>10 y 25 caracteres</b></p>
             </div>
             <div class="pure-control-group">
-                <label for="aligned-password">Password</label>
+                <label for="aligned-password">Password *</label>
                 <input type="password" id="aligned-password" placeholder="Password" required=""
                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" maxlength="20" />
-                <span class="pure-form-message-inline">*</span>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div id="message" class="mensaje">
+                <h3>La contraseña debe contener lo siguiente:</h3>
+                <p id="letter" class="invalid">Una letra <b>minuscula</b> </p>
+                <p id="capital" class="invalid">Una letra <b>mayuscula</b></p>
+                <p id="number" class="invalid">Un <b>numero</b></p>
+                <p id="length" class="invalid">Minimo <b>15 caracteres</b> y maximo <b>20 caracteres</b></p>
             </div>
             <div class="pure-control-group">
-                <label for="aligned-confirmarpassword">Confirmar password</label>
+                <label for="aligned-confirmarpassword">Confirmar password *</label>
                 <input type="password" id="aligned-confirmarpassword" placeholder="Confirmar password" required=""
                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" maxlength="20" />
-                <span class="pure-form-message-inline">*</span>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div id="message2" class="mensaje">
+                <h3>La contraseña debe contener lo siguiente:</h3>
+                <p id="igual" class="invalid">La contrasena debe ser <b>Igual</b> a la anterior</p>
             </div>
             <div class="pure-control-group">
-                <label for="aligned-email">Correo electr&oacute;nico</label>
+                <label for="aligned-email">Correo electr&oacute;nico *</label>
                 <input type="email" id="aligned-email" placeholder="Correo electr&oacute;nico" required=""
                     maxlength="130" />
-                <span class="pure-form-message-inline">*</span>
+                <span class="pure-form-message-inline"></span>
+            </div>
+            <div id="message3" class="mensaje">
+                <h3>La contraseña debe contener lo siguiente:</h3>
+                <p id="email" class="invalid">El correo debe tener menos de <b>120 caracteres</b></p>
             </div>
             <div class="pure-control-group">
-                <label for="departamento">Departamento: </label>
-                <br><br>
-                <select class="browser-default" name="departamento" id="departamento">
+                <label for="departamento">Departamento: *</label>
+                <select class="browser-default" name="departamento" id="departamento" required="">
                     <option value="">Seleccione...</option>
                 </select>
             </div>
             <div class="pure-control-group">
-                <label for="municipio">Municipio: </label>
-                <select class="browser-default" name="municipio" id="municipio">
+                <label for="municipio">Municipio: *</label>
+                <select class="browser-default" name="municipio" id="municipio" required="">
                     <option value="">Seleccione...</option>
                 </select>
             </div>
@@ -158,43 +181,6 @@
             </div>
         </fieldset>
     </form>
-    <div id="message" class="mensaje">
-        <h3>La contraseña debe contener lo siguiente:</h3>
-        <p id="letter" class="invalid">Una letra <b>minuscula</b> </p>
-        <p id="capital" class="invalid">Una letra <b>mayuscula</b></p>
-        <p id="number" class="invalid">Un <b>numero</b></p>
-        <p id="length" class="invalid">Minimo <b>15 caracteres</b> y maximo <b>20 caracteres</b></p>
-    </div>
-    <div id="message2" class="mensaje">
-        <h3>La contraseña debe contener lo siguiente:</h3>
-        <p id="igual" class="invalid">La contrasena debe ser <b>Igual</b> a la anterior</p>
-    </div>
-    <div id="message3" class="mensaje">
-        <h3>La contraseña debe contener lo siguiente:</h3>
-        <p id="email" class="invalid">El correo debe tener menos de <b>120 caracteres</b></p>
-    </div>
-    <div id="message4" class="mensaje">
-        <h3>El nombre debe contener lo siguiente:</h3>
-        <p id="nombre" class="invalid">El nombre debe tener como maximo <b>25 caracteres</b></p>
-    </div>
-    <div id="message5" class="mensaje">
-        <h3>El apellido debe contener lo siguiente:</h3>
-        <p id="apellido" class="invalid">El apellido debe tener como maximo <b>25 caracteres</b></p>
-    </div>
-    <div id="message7" class="mensaje">
-        <h3>El usuario debe contener lo siguiente:</h3>
-        <p id="usuario" class="invalid">El usuario debe contener entre:<b>10 y 25 caracteres</b></p>
-    </div>
-    <div id="message8" class="mensaje">
-        <h3>¿Es alguna de estas enfermedades contagiosas?:</h3>
-        <p><input type="checkbox" id="aligned-cb" /> Dengue </p>
-        <p><input type="checkbox" id="aligned-cb" /> Fiebre Amarilla.</p>
-        <p><input type="checkbox" id="aligned-cb" /> Malaria. </p>
-        <p><input type="checkbox" id="aligned-cb" /> Coronavirus. </p>
-        <p><input type="checkbox" id="checkbox-contagiosa" /> Otra. </p>
-        <input type="text" id="aligned-enfermedad" placeholder="Describa la enfermedad" maxlength="200" />
-    </div>
-
 </body>
 
 </html>
